# yuno-md

./: .bandit  .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  fragment_intensively_v2.prompt  init_userbot.py  main.py  pyproject.toml  pytest.ini  refresh-codeartifact.sh  yuno.prompt
app/bootstrap/: bootstrapper.py  components.py
app/components/database/: sqlite_db.py
app/dependencies/: components.py  repositories.py  services.py
app/entities/: message.py  user.py
app/repositories/chat_repository/: chat_repository_interface.py  sqlite_chat_repository.py
app/repositories/user_repository/: sqlite_user_repository.py  user_repository_interface.py
app/services/FrictionService/: friction_engine.py  friction_fallback.py  friction_schema.py
app/services/KnowledgeService/: knowledge_service.py  knowledge_service_interface.py
app/services/McpService/: __init__.py  mcp_manager.py
app/services/MemoryService/: memory_service.py  memory_service_interface.py
app/services/NeibotService/: dspy_signatures.py  neibot_dspy_service.py  neibot_service.py  neibot_service_interface.py
app/services/TelegramService/: telegram_service.py  telegram_service_interface.py
app/services/UserService/: user_service.py  user_service_interface.py
app/tools/: __init__.py  web_search_tool.py
app/utils/: retry.py
configuration/: default.json  development.json  mcp_servers.json
docs/: FRICCTION_ENGINE_PLAN.md  pro_user_limits_explained.md
scripts/: configure-poetry-local.sh
skill/langfuse-reviewer/: SKILL.md
tests/: conftest.py
tests/unit/bootstrap/: test_components.py
tests/unit/services/: test_friction_engine.py  test_friction_fallback.py  test_knowledge_service.py  test_mcp_manager.py  test_memory_service.py  test_neibot_service.py  test_telegram_service.py  test_telegram_service_cache_verification.py  test_telegram_service_history.py  test_telegram_service_private_chat.py  test_user_service.py
tests/unit/tools/: test_web_search_tool.py
