[tool.poetry]
name = "telegram-bot-adapter"
version = "1.0.0"
description = ""
authors = ["Jack Cloudman <jack@xuno.io>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = {extras = ["email"], version = "^2.11.5"}
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.0"
lagom = "^2.7.5"
pre-commit = "^4.2.0"
requests = "^2.32.3"
authlib = "^1.6.0"
httpx = "^0.28.1"
jinja2 = "^3.1.6"
aiofiles = "^24.1.0"
xuno-components = {version = "0.3.0", source = "xuno"}
redis = "5.2.1"
telethon = "^1.41.2"
langfuse = "^3.8.1"
pillow = "^12.0.0"
google-genai = "^1.52.0"
openai = "^2.8.1"
openinference-instrumentation-google-genai = "^0.1.8"
tenacity = "^9.1.2"
mem0ai = { git = "https://github.com/junoai-org/mem0.git", branch = "feature/liteLLM_reasoning_effort" }
google-adk = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.14.0"
pytest-cov = "^3.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
types-psycopg2 = "^2.9.21.20250318"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.backend"

[[tool.poetry.source]]
name = "xuno"
url = "https://us-central1-python.pkg.dev/yunoai-1679262920707/xuno-pypi/simple/"
priority = "supplemental"
